[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tradingagents"
version = "0.1.0"
description = "Multi-agent LLM-powered trading framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "TradingAgents Contributors" }
]
keywords = ["trading", "agents", "llm", "finance", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
enterprise = [
    "redis>=5.0.0",
    "celery>=5.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
tradingagents = "tradingagents.cli:app"

[project.urls]
Homepage = "https://github.com/TauricResearch/TradingAgents"
Repository = "https://github.com/TauricResearch/TradingAgents"
Changelog = "https://github.com/TauricResearch/TradingAgents/blob/main/CHANGELOG.md"
Issues = "https://github.com/TauricResearch/TradingAgents/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tradingagents*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov-report=xml since I'm only running tests locally
addopts = "--cov=tradingagents --cov-report=term-missing"

[tool.coverage.run]
source = ["tradingagents"]
omit = ["tests/*", "*/__init__.py"]
